--- a/package.json
+++ b/package.json
@@ -10,5 +10,22 @@
   "repository": {
     "url": "https://github.com/bloomdido/idic.git",
     "type": "git"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.8"
+  },
+  "peerDependencies": {
+    "jss": "^9.8.3",
+    "jss-preset-default": "^4.5.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-jss": "^8.5.1"
   }
 }
