--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "idic",
   "version": "1.0.0",
   "description": "Simple React HTML component framework utilizing JSS",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "author": "Chris Anthes <canthes@bloomdido.com>",
   "license": "MIT",
   "homepage": "https://github.com/bloomdido/idic.git",
