--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
+    "lodash": "^4.17.10",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8"
   },
