--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "idic",
   "version": "1.0.0",
   "description": "Simple React HTML component framework utilizing JSS",
-  "main": "./lib/index.js",
+  "main": "dist/idic.js",
+  "module": "src/index.js",
   "author": "Chris Anthes <canthes@bloomdido.com>",
   "license": "MIT",
   "homepage": "https://github.com/bloomdido/idic.git",
@@ -12,6 +13,7 @@
     "type": "git"
   },
   "scripts": {
+    "build": "webpack",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "devDependencies": {
@@ -23,7 +25,12 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
+    "jss": "^9.8.7",
+    "jss-preset-default": "^4.5.0",
     "lodash": "^4.17.10",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-jss": "^8.6.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8"
   },
