--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "clean-webpack-plugin": "^0.1.19",
     "lodash": "^4.17.10",
     "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-jss": "^8.6.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8"
   },
   "peerDependencies": {
     "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-jss": "^8.5.1"
   }
 }
