Add prepublish script

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "build": "webpack",
+    "prepublish": "webpack",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "devDependencies": {
