--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-idic",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Simple React HTML component framework utilizing JSS",
   "main": "dist/react-idic.js",
   "author": "Chris Anthes <canthes@bloomdido.com>",
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "build": "webpack",
-    "prepublish": "webpack",
+    "prepublish": "yarn build",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "devDependencies": {
